--- a/index.html
+++ b/index.html
@@ -26,12 +26,43 @@
                 <div class="social"><img src="images/twitter.png" width="35px" height="35px"></div>
                 <div class="social"><img src="images/facebook.png" width="35px"     height="35px"></div>
             </div>
-            <div class="hamburger">&#9776;</div>
+            <div class="hamburger" onclick="hamBurger(this)">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+
+                <div id="mobileMenu" class="dropdown-content">
+                  <a href="#home">home</a>
+                  <a href="#about">our shop</a>
+                  <a href="#blog">blog</a>
+                  <a href="#contact">hours & contact</a>
+                </div>
+            </div>
          </div>
 
     <div class="hero">ROMANCE IS <br /> <span style="color:#FFCAD0">IN THE AIR</span></div>
 
+
+    <div class="the-mission">
+        <h2>
+            The Mission is <span style="color:#FFCAD0">Love</span>
+        </h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </p>
+
+    </div>
+
+    <div class="flowers">
+                  
+    </div>
+
+
+
+
     <div class="footer">
     </div>
+
+</div>
+
+    <script src="script.js"></script>
 </body>
 </html>
