--- a/contactus.html
+++ b/contactus.html
@@ -52,8 +52,73 @@
             </div>
         </header>
 
-        <section>
+        <section class="contact mb-5">
 
+  <div class="bg-white p-5">
+
+    <div class="row">
+  <!--Section heading-->
+  <h2 class="col-12 h2-responsive font-weight-bold my-4 p-0">Contact us</h2>
+  <!--Section description-->
+  <p>Feel free to reach out with any questions or concerns. Our Team will get back to you as soon as we are able.</p>
+        <!--Grid column-->
+        <div class="col-md-12 mb-md-0 mb-5 p-0">
+            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+
+                <!--Grid row-->
+                <div class="row mb-3">
+
+                    <!--Grid column-->
+                    <div class="col-md-12 p-0">
+                        <div class="md-form mb-0">
+                            <input type="text" id="name" name="name" class="form-control" placeholder="Your Name">
+                        </div>
+                    </div>
+
+                </div>
+                <!--Grid row-->
+                <div class="row mb-3">
+                    <div class="col-md-12 p-0">
+                        <div class="md-form mb-0">
+                            <input type="text" id="email" name="email" class="form-control" placeholder="Your Email">
+                        </div>
+                    </div>
+                </div>
+
+                <!--Grid row-->
+                <div class="row mb-3">
+                    <div class="col-md-12 p-0">
+                        <div class="md-form mb-0 ">
+                            <input type="text" id="subject" name="subject" class="form-control" placeholder="Subject">
+                        </div>
+                    </div>
+                </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row mb-3">
+
+                    <!--Grid column-->
+                    <div class="col-md-12 p-0">
+                        <div class="md-form">
+                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea" placeholder="Your message"></textarea>
+                        </div>
+
+                    </div>
+                </div>
+                <!--Grid row-->
+
+            </form>
+
+            <div class="text-center text-md-left">
+                <a class="btn" onclick="document.getElementById('contact-form').submit();">Send</a>
+            </div>
+            <div class="status"></div>
+        </div>
+
+
+    </div>
+</div>
         </section>
 
 
