contact form image

--- a/index.html
+++ b/index.html
@@ -64,20 +64,26 @@
        </div>
 
        <section class="row">
-            <div class="col-4 ml-sm-1 ml-md-5 mb-5 d-flex justify-content-between">
-                <img src="images/paralaxflowershome1.png" width="50px" height="50px;">
-                <img src="images/paralaxflowershome2.png" width="50px" height="50px;">
-                <img src="images/paralaxflowershome3.png" width="50px" height="50px;">
-                <img src="images/paralaxflowershome4.png" width="50px" height="50px;">
+            <div class="col-5 ml-sm-1 ml-md-5 mb-5 d-flex">
+                <img class="ml-5 ml-md-auto" src="images/paralaxflowershome1.png" width="50px" height="50px;">
             </div>
 
-            <div class="col-md-6 col-lg-6 col-xl-5 col-sm-10 ml-auto mr-5 mb-5">
+            <div class="col-md-5 col-lg-5 col-xl-4 col-sm-10 ml-auto mr-5 mb-5">
                 <h1>The Mission is Love...</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam doloribus officia error velit sapiente, quam veritatis tempora vitae deleniti voluptas, neque consequuntur recusandae officiis ipsa. Maxime est veritatis quas quidem.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam doloribus officia error velit sapiente, quam veritatis tempora vitae deleniti voluptas, neque consequuntur recusandae officiis ipsa. Maxime est veritatis quas quidem.
+                    <br><br>
+                    Sed ultrices, augue ut porttitor imperdiet, purus ex ullamcorper ex, id ultrices ipsum justo eget metus. Nulla pellentesque pellentesque ornare. Vestibulum viverra ornare porttitor. Aenean egestas nibh vel interdum interdum. In a sagittis est. Maecenas libero sapien, rhoncus vel tempus non, aliquet eget justo. 
+                </p>
 
-                <h1>The Method is Flowers...</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam doloribus officia error velit sapiente, quam veritatis tempora vitae deleniti voluptas, neque consequuntur recusandae officiis ipsa.</p>
+                <h1 class="mt-5">The Method is Flowers...</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam doloribus officia error velit sapiente, quam veritatis tempora vitae deleniti voluptas, neque consequuntur recusandae officiis ipsa.
+                    <br><br>
+                Cras hendrerit augue eu diam luctus congue. Donec diam eros, convallis eget enim eget, tempor luctus justo. Etiam luctus arcu leo, et luctus elit fermentum non. Nunc scelerisque viverra libero a sollicitudin. Suspendisse tristique ligula ut dolor mattis porttitor. Pellentesque volutpat mauris a magna gravida, quis lacinia neque mattis. 
+
+                </p>
             </div>
+
+            <div class="row">
 
             <div class="card col-xl-4 col-lg-4 col-md-4 col-sm-12 pb-3 " style="padding: 2rem">
                 <img src="images/cardone.png" class="card-img-top pt-3" alt="yellow flowers"/>
@@ -102,6 +108,8 @@
                   
                 </div>
               </div>
+
+            </div>
 
               <div class="gray-bar col-12 text-center my-5">
                     <h3>Flowers by the Stem</h3>
